<?xml version="1.0"?>
<package>
  <name>husky_gazebo</name>
  <version>0.0.3</version>
  <description>Clearpath Husky simulator bringup</description>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>husky_control</run_depend>

  <export>
  </export>
</package>
