<?xml version="1.0"?>
<package>
  <name>husky_gazebo</name>
  <version>0.1.0</version>
  <description>Clearpath Husky A200 Simulator bringup</description>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>  

  <export>
  </export>
</package>
