<?xml version="1.0"?>
<package>
  <name>husky_simulator</name>
  <version>0.0.3</version>
  <description>The husky_simulator package</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_gazebo</run_depend>
  <run_depend>husky_gazebo_plugins</run_depend>

  <export><metapackage/></export>
</package>
